--- a/anomaly-app/src/app/pages/main/main.html
+++ b/anomaly-app/src/app/pages/main/main.html
@@ -34,3 +34,9 @@
         </div>
     </span>
 </div>
+
+<app-anomaly-details 
+    [isVisible]="showAnomalyDetails" 
+    [anomalyData]="selectedAnomalyData"
+    (close)="onCloseAnomalyDetails()">
+</app-anomaly-details>
