--- a/anomaly-app/src/app/pages/main/main.html
+++ b/anomaly-app/src/app/pages/main/main.html
@@ -38,5 +38,6 @@
 <app-anomaly-details 
     [isVisible]="showAnomalyDetails" 
     [anomalyData]="selectedAnomalyData"
+    [analyzedPeriod]="analyzedPeriodData"
     (close)="onCloseAnomalyDetails()">
 </app-anomaly-details>
