--- a/anomaly-app/src/app/pages/main/main.html
+++ b/anomaly-app/src/app/pages/main/main.html
@@ -39,5 +39,7 @@
     [isVisible]="showAnomalyDetails" 
     [anomalyData]="selectedAnomalyData"
     [analyzedPeriod]="analyzedPeriodData"
+    [newsData]="newsData"
+    [isLoadingNews]="isLoadingNews"
     (close)="onCloseAnomalyDetails()">
 </app-anomaly-details>
