--- a/anomaly-app/src/app/pages/main/main.html
+++ b/anomaly-app/src/app/pages/main/main.html
@@ -20,6 +20,9 @@
                   (click)="selectItem(item.id)">
                  <div class="list-item-content">
                      <span class="list-item-name">{{ item.name }}</span>
+                     <div class="mini-chart">
+                         <canvas [id]="'miniChart' + item.id" width="60" height="30"></canvas>
+                     </div>
                      <div class="list-item-numbers">
                          <span class="first-number">{{ item.firstNumber | number }}</span>
                          <span class="second-number">{{ item.secondNumber }}%</span>
