icon tab changed

--- a/anomaly-app/src/app/pages/main/main.html
+++ b/anomaly-app/src/app/pages/main/main.html
@@ -1,4 +1,8 @@
 
+<div class="dashboard-header">
+    <h1>Live Anomaly Detection Dashboard</h1>
+</div>
+
 <div class="example-container">
     <span class="list-content">
                 <div class="search">
